# colonoscopy-triage-version2

./: .dockerignore  Dockerfile  Dockerfile.streamlit  README.md  compose.azure.yaml  compose.local.yaml  compose.yaml  main.py  pyproject.toml  requirements.txt
app/: clients.py  functions.py  logging_config.py  main.py  routes.py
app/models/: colonoscopy.py
app/prompts/: json_summary_prompt.yaml  recommendation_prompt.yaml  summary_prompt.yaml
client_scripts/: human_key.py  make_request.py
docker/: Dockerfile.api  Dockerfile.streamlit
streamlit_app/: ui_app.py
tests/: conftest.py  test_api.py
